# backend-openstack-lib

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  pyproject.toml  requirements.txt  sandbox.yaml  small-sandbox.yaml  tox.ini
.github/workflows/: github-actions.yml
crczp/openstack_driver/: __init__.py  decorators.py  open_stack_client.py  open_stack_proxy.py  utils.py
crczp/openstack_driver/templates/: terraform-deploy-template.j2
tests/: conftest.py  test_decorators.py  test_integration.py  test_open_stack_client.py  test_open_stack_proxy.py  test_utils.py
tests/assets/: base-net-template.yml  definition-empty.yml  definition.yml  generated-template.tf
