[project]
name = "crczp-openstack-lib"
version = "1.0.3"
description = "Cyberrangecz platform OpenStack Driver Python lib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "cybersecurityhub.cz" }]
dependencies = [
    "PyYAML>=6.0.2",
    "crczp-python-commons>=1.0.1,<3.0",
    "jinja2>=3.1.3",
    "keystoneauth1>=5.11.0",
    "netaddr>=1.3.0",
    "structlog>=25.3.0",
    "deepdiff>=8.4.2",
    "yamlize>=0.7.0",
    "python-glanceclient>=4.8.0",
    "python-keystoneclient>=5.6.0",
    "python-neutronclient>=11.5.0",
    "python-novaclient>=18.9.0"
]

[project.urls]
GitHub = "https://github.com/cyberrangecz/backend-openstack-lib"


[build-system]
# TODO: Replace this with uv_build when it is it released for GA.
#   https://github.com/astral-sh/uv/issues/3957
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crczp"]
exclude-packages = ["tests"]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["crczp"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
strict = true
pretty = true
enable_error_code = ["deprecated", "explicit-override"]
explicit_package_bases = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"

[tool.pylint]
# You can add pylint configs here or in .pylintrc

[tool.bandit]
skips = ["B101", "B311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
